--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,17 @@
 		<artifactId>jackson-databind</artifactId>
 		<version>2.6.3</version>
 	</dependency>
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>18.0</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.flexionmobile</groupId>
+	    <artifactId>codingchallenge-pluginapi</artifactId>
+	    <version>1.0</version>
+	    <scope>system</scope>
+	    <systemPath>${project.basedir}/lib/pluginapi.jar</systemPath>
+	</dependency>
   </dependencies>
 </project>
